bazel_dep(name = "smithy_cpp", version = "0.0.0")

# smithy_cpp is not published to the Bazel Central Registry yet, so the module
# version above is a placeholder and the source comes from this pinned commit.
# Bump the pin deliberately; there are no tagged releases to track.
# Evaluation: https://github.com/muchq/MoonBase/issues/1168
git_override(
    module_name = "smithy_cpp",
    commit = "2ba6bd84023d231d8ed30cb12e3e3551f31a3d08",
    remote = "https://github.com/aaylward/smithy-cpp.git",
)
