alias(
    name = "raylib",
    actual = select({
        ":is_linux": "@raylib_linux//:raylib_linux",
        ":is_mac": "@raylib_macos//:raylib_macos",
    }),
    visibility = ["//visibility:public"],
)

config_setting(
    name = "is_mac",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:macos",
    ],
)

config_setting(
    name = "is_linux",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)
