load("@rules_java//java:defs.bzl", "java_package_configuration")
load("@rules_java//toolchains:default_java_toolchain.bzl", "default_java_toolchain")
load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_prost//:defs.bzl", "rust_prost_toolchain")

package_group(
    name = "nullaway_packages",
    packages = [
        "//jvm/...",
    ],
)

java_package_configuration(
    name = "nullaway_config",
    javacopts = [
        "-Xep:NullAway:ERROR",
        "-XepOpt:NullAway:OnlyNullMarked=true",
        "-XepOpt:NullAway:HandleTestAssertionLibraries=true",
    ],
    packages = [":nullaway_packages"],
)

default_java_toolchain(
    name = "nullaway_java_toolchain",
    configuration = dict(),
    package_configuration = [":nullaway_config"],
    source_version = "25",
    target_version = "25",
    visibility = ["//visibility:public"],
)

#proto_lang_toolchain(
#    name = "protoc_java_toolchain",
#    command_line = "--java_out=%s",
#    progress_message = "Generating Java proto_library %{label}",
#    runtime = "@protobuf-java//jar",
#    toolchain_type = "@rules_java//java/proto:toolchain_type",
#)

#proto_lang_toolchain(
#    name = "protoc_cc_toolchain",
#    command_line = "--cpp_out=%s",
#    progress_message = "Generating Cpp proto_library %{label}",
#    runtime = "@com_google_protobuf//:protobuf",
#    toolchain_type = "@rules_cc//cc/proto:toolchain_type",
#)
#
#proto_toolchain(
#    name = "base_toolchain",
#    proto_compiler = "@com_google_protobuf//:protoc",
#)

rust_library_group(
    name = "prost_runtime",
    deps = [
        "@crates//:prost",
    ],
)

rust_library_group(
    name = "tonic_runtime",
    deps = [
        ":prost_runtime",
        "@crates//:tonic",
        "@crates//:tonic-prost",
    ],
)

rust_prost_toolchain(
    name = "prost_toolchain_impl",
    prost_plugin = "@crates//:protoc-gen-prost__protoc-gen-prost",
    prost_runtime = ":prost_runtime",
    prost_types = "@crates//:prost-types",
    tonic_plugin = "@crates//:protoc-gen-tonic__protoc-gen-tonic",
    tonic_runtime = ":tonic_runtime",
)

toolchain(
    name = "prost_toolchain",
    toolchain = "prost_toolchain_impl",
    toolchain_type = "@rules_rust_prost//:toolchain_type",
)
