load("@rules_proto//proto:defs.bzl", "proto_lang_toolchain", "proto_toolchain")
load("@rules_rust//rust:defs.bzl", "rust_library_group")
load("@rules_rust_prost//:defs.bzl", "rust_prost_toolchain")

proto_lang_toolchain(
    name = "protoc_cc_toolchain",
    command_line = "--cpp_out=%s",
    progress_message = "Generating Cpp proto_library %{label}",
    runtime = "@com_google_protobuf//:protobuf",
    toolchain_type = "@rules_cc//cc/proto:toolchain_type",
)

toolchain(
    name = "protoc_cc_toolchain_impl",
    toolchain = ":protoc_cc_toolchain",
    toolchain_type = "@rules_cc//cc/proto:toolchain_type",
)

proto_toolchain(
    name = "base_toolchain",
    proto_compiler = "@com_google_protobuf//:protoc",
)

rust_library_group(
    name = "prost_runtime",
    deps = [
        "@crates//:prost",
    ],
)

rust_library_group(
    name = "tonic_runtime",
    deps = [
        ":prost_runtime",
        "@crates//:tonic",
        "@crates//:tonic-prost",
    ],
)

rust_prost_toolchain(
    name = "prost_toolchain_impl",
    prost_plugin = "@crates//:protoc-gen-prost__protoc-gen-prost",
    prost_runtime = ":prost_runtime",
    prost_types = "@crates//:prost-types",
    tonic_plugin = "@crates//:protoc-gen-tonic__protoc-gen-tonic",
    tonic_runtime = ":tonic_runtime",
)

toolchain(
    name = "prost_toolchain",
    toolchain = "prost_toolchain_impl",
    toolchain_type = "@rules_rust_prost//:toolchain_type",
)
