cc_library(
    name = "cards",
    hdrs = ["card.h"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "cards_test",
    size = "small",
    srcs = ["card_test.cc"],
    deps = [
        ":cards",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "card_mapper",
    srcs = ["card_mapper.cc"],
    hdrs = ["card_mapper.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":cards",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "card_mapper_test",
    size = "small",
    srcs = ["card_mapper_test.cc"],
    deps = [
        ":card_mapper",
        "@googletest//:gtest_main",
    ],
)
