load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "escapist_client",
    srcs = ["escapist_client.cc"],
    hdrs = ["escapist_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//protos/escapist:escapist_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_test(
    name = "escapist_client_test",
    size = "small",
    srcs = ["escapist_client_test.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":escapist_client",
        "//protos/escapist:escapist_cc_proto",
        "@googletest//:gtest_main",
    ],
)
