load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")

cc_binary(
    name = "example_meerkat",
    srcs = ["main.cc"],
    deps = [
        "//cpp/meerkat",
    ],
)

cc_test(
    name = "example_meerkat_unit_test",
    size = "small",
    srcs = ["example_meerkat_unit_test.cc"],
    deps = [
        "//cpp/meerkat",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "example_meerkat_integration_test",
    size = "small",
    srcs = ["example_meerkat_integration_test.cc"],
    deps = [
        "//cpp/meerkat",
        "//cpp/meerkat:http_client",
        "@googletest//:gtest_main",
    ],
)

# Legacy test target - points to unit tests for backwards compatibility
cc_test(
    name = "example_meerkat_test",
    size = "small",
    srcs = ["example_meerkat_unit_test.cc"],
    deps = [
        "//cpp/meerkat",
        "@googletest//:gtest_main",
    ],
)
