load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

cc_library(
    name = "golf_grpc_service_lib",
    srcs = ["golf_grpc_service.cc"],
    hdrs = ["golf_grpc_service.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//protos/golf_grpc:golf_grpc_service_proto",
        "@com_github_grpc_grpc//:grpc++",
    ],
)

cc_binary(
    name = "golf_grpc_service",
    srcs = ["main.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":golf_grpc_service_lib",
        "@com_github_grpc_grpc//:grpc++_reflection",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "golf_grpc_service_test",
    size = "small",
    srcs = ["golf_grpc_service_test.cc"],
    deps = [
        ":golf_grpc_service_lib",
        "@googletest//:gtest_main",
    ],
)

pkg_tar(
    name = "golf_grpc_cc_grpc_tar",
    srcs = [":golf_grpc_service"],
)

oci_image(
    name = "golf_grpc_cc_grpc_image",
    base = "@docker_lib_ubuntu",
    entrypoint = ["/golf_grpc_service"],
    exposed_ports = [
        str(x)
        for x in range(8080, 8090)
    ],
    tars = [":golf_grpc_cc_grpc_tar"],
)

oci_load(
    name = "oci_tarball",
    image = ":golf_grpc_cc_grpc_image",
    repo_tags = ["golf_grpc_cc_grpc:latest"],
)

filegroup(
    name = "golf_grpc_service_oci.tar",
    srcs = [":oci_tarball"],
    output_group = "tarball",
)
