cc_library(
    name = "game_state_mapper",
    srcs = ["game_state_mapper.cc"],
    hdrs = ["game_state_mapper.h"],
    deps = [
        "//cpp/cards",
        "//cpp/cards:card_mapper",
        "//cpp/cards/golf",
    ],
)

cc_test(
    name = "game_state_mapper_test",
    srcs = ["game_state_mapper_test.cc"],
    deps = [
        ":game_state_mapper",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "api",
    hdrs = ["api.h"],
    deps = [
        "//cpp/cards/golf",
        "@com_google_absl//absl/status:statusor",
        "@mongoose_cc//:mongoose",
    ],
)

cc_binary(
    name = "golf_service",
    srcs = [
        "Main.cc",
    ],
    deps = [
        ":api",
        ":game_state_mapper",
        "//cpp/cards/golf",
        "//protos/golf_ws:golf_cc_proto",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_protobuf//:protobuf",
        "@mongoose_cc//:mongoose",
    ],
)
