load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "game_state_mapper",
    srcs = ["game_state_mapper.cc"],
    hdrs = ["game_state_mapper.h"],
    deps = [
        "//cpp/cards",
        "//cpp/cards:card_mapper",
        "//cpp/cards/golf",
        "//protos/golf_ws:golf_cc_proto",
    ],
)

cc_test(
    name = "game_state_mapper_test",
    size = "small",
    srcs = ["game_state_mapper_test.cc"],
    deps = [
        ":game_state_mapper",
        "//cpp/cards/golf:player",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "handlers",
    srcs = ["handlers.cc"],
    hdrs = ["handlers.h"],
    deps = [
        ":game_state_mapper",
        "//cpp/cards/golf",
        "//protos/golf_ws:golf_cc_proto",
        "@com_google_absl//absl/status:statusor",
        "@com_google_protobuf//:protobuf",
        "@mongoose_cc//:mongoose",
    ],
)

cc_library(
    name = "router",
    srcs = ["router.cc"],
    hdrs = ["router.h"],
    deps = [
        ":handlers",
        "@mongoose_cc//:mongoose",
    ],
)

cc_binary(
    name = "golf_service",
    srcs = [
        "Main.cc",
    ],
    deps = [
        ":router",
        "//cpp/cards/golf:doc_db_game_store",
        "//cpp/doc_db_client",
        "@com_github_grpc_grpc//:grpc++",
        "@com_google_absl//absl/log:initialize",
        "@mongoose_cc//:mongoose",
    ],
)
