load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "color",
    srcs = ["color.cc"],
    hdrs = ["color.h"],
    deps = [],
)

cc_binary(
    name = "mandelbrot",
    srcs = ["mandelbrot.cc"],
    linkopts = select({
        "@platforms//os:macos": [
            "-framework",
            "Metal",
            "-framework",
            "IOKit",
            "-framework",
            "CoreVideo",
            "-framework",
            "CoreAudio",
            "-framework",
            "CoreGraphics",
            "-framework",
            "CoreMedia",
            "-framework",
            "CoreHaptics",
            "-framework",
            "AppKit",
            "-framework",
            "Carbon",
            "-framework",
            "QuartzCore",
            "-framework",
            "AudioToolbox",
            "-framework",
            "GameController",
            "-framework",
            "ForceFeedback",
            "-framework",
            "AVFoundation",
            "-framework",
            "CoreFoundation",
            "-framework",
            "UniformTypeIdentifiers",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":color",
        "//cpp/trill",
        "@sdl3",
    ],
)
