load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel/rules:cc.bzl", "sdl_cc_binary")

cc_library(
    name = "color",
    srcs = ["color.cc"],
    hdrs = ["color.h"],
    deps = [],
)

sdl_cc_binary(
    name = "mandelbrot",
    srcs = ["mandelbrot.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":color",
        "//cpp/trill",
        "@sdl3",
    ],
)
