load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "meerkat",
    srcs = ["meerkat.cc"],
    hdrs = ["meerkat.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@mongoose_cc//:mongoose",
        "@nlohmann_json//:json",
    ],
)

cc_library(
    name = "http_client",
    srcs = ["http_client.cc"],
    hdrs = ["http_client.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@mongoose_cc//:mongoose",
        "@nlohmann_json//:json",
    ],
)

cc_test(
    name = "meerkat_test",
    size = "small",
    srcs = ["meerkat_test.cc"],
    deps = [
        ":meerkat",
        "@googletest//:gtest_main",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "meerkat_integration_test",
    size = "small",
    srcs = ["meerkat_integration_test.cc"],
    deps = [
        ":meerkat",
        ":http_client",
        "@googletest//:gtest_main",
        "@com_google_absl//absl/strings",
    ],
)

cc_test(
    name = "http_client_test",
    size = "small",
    srcs = ["http_client_test.cc"],
    deps = [
        ":http_client",
        ":meerkat",
        "@googletest//:gtest_main",
    ],
)