load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "png_plusplus",
    hdrs = ["png_plusplus.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//cpp/image_core",
        "@libpng",
    ],
)

cc_test(
    name = "png_plusplus_test",
    size = "small",
    srcs = ["png_plusplus_test.cc"],
    visibility = ["//visibility:public"],
    deps = [
        ":png_plusplus",
        "//cpp/image_core",
        "@googletest//:gtest_main",
    ],
)
